# misha-blog

./: .env  .gitignore  Cargo.toml  Rocket.toml  build.gradle.kts  diesel.toml  settings.gradle.kts  vercel.json
.github/workflows/: nextjs.yml
front/: codegen.ts  next.config.js  package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
front/src/app/about/: page.tsx
front/src/app/contact/: page.tsx
front/src/app/providers/: comments-provider.tsx
front/src/components/blog-short/: blog-short.tsx
front/src/components/comment-area/: comment-area.tsx
front/src/components/comment-form/: comment-form.tsx
front/src/components/comment-list/: comment-list.tsx
front/src/components/info/: info.tsx
front/src/lib/: apollo-client-provider.tsx  apollo-ssr-client.ts
front/src/providers/: comments-provider.tsx
migrations/2023-10-26-090837_setup/: down.sql  up.sql
misha-blog/src/app/: not-found.tsx
server/: codegen.ts  package-lock.json  package.json  schema.graphql  tsconfig.json
server/api/: index.ts
server/prisma/: schema.prisma
server/src/: index.ts  mock_data.ts
src/: controller.rs  error_catcher.rs  lib.rs  main.rs  models.rs  schema.rs
src/controller/: post_services.rs
src/controller/post_services/: errors.rs
src/templates/: index.html.hbs
src/templates/layouts/: main.html.hbs
static/: general.css
templates/: 404.html.hbs  422.html.hbs  500.html.hbs  505.html.hbs  about.html.hbs  contact.html.hbs  index.html.hbs
templates/layouts/: main.html.hbs  navbar.html.hbs
templates/posts/: first-post.html.hbs  first_post.html.hbs  remove_column_in_db_in_hybris.html.hbs
templates/posts/tag/: comment_section.html.hbs  like_section.html.hbs  post_preview.html.hbs
(+19 files in other folders)
