[package]
name = "misha-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
version = "=0.5.0-rc.3"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_postgres_pool"]